Style : Fixed z-index for modal

--- a/src/components/tasks/TaskSearch/tasksearch.module.scss
+++ b/src/components/tasks/TaskSearch/tasksearch.module.scss
@@ -151,7 +151,7 @@ $radius: 5px;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    z-index: 1;
+    z-index: 3;
     @media (max-width: 768px) {
         position: absolute;
         top: 50%;
